--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,20 @@
 </head>
 <body>
 
-<%= yield %>
+<div class="container row">
+
+  <div class="header">
+  </div>
+
+  <!--alert messages-->
+  <% flash.each do |key, value| %>
+      <%= content_tag(:div, value, class: "alert alert-#{key}") %>
+  <% end %>
+
+  <%= yield %>
+
+
+</div>
 
 </body>
 </html>
