--- a/app/views/static_pages/navigation.html.erb
+++ b/app/views/static_pages/navigation.html.erb
@@ -11,3 +11,4 @@
 <%= link_to 'Issue Pool', topics_path %>
 <%= link_to 'Topic Group', topic_groups_path %>
 <%= link_to 'Thoughts', thoughts_path %>
+<%= link_to 'Import', import_path %>
