--- a/app/assets/stylesheets/thoughts.css.scss
+++ b/app/assets/stylesheets/thoughts.css.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the Thoughts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.thought_input {
+  height: 200px;
+}
