--- a/app/views/thoughts/_form.html.erb
+++ b/app/views/thoughts/_form.html.erb
@@ -1,4 +1,4 @@
 <%= simple_form_for [@topic, @thought] do |f| %>
-    <%= f.input :content, as: :text, rows: 8 %>
+    <%= f.input :content, label: false,  placeholder: 'Enter your Thoughts here', input_html: { class: 'span7 thought_input',  rows: 5, id: 'normal' }   %>
     <%= f.button :submit %>
 <% end %>
